<resources>
    <string name="app_name" translatable="false">Nibay</string>
    <string name="login_button_text">Login</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="landing_page_title_text">Looking For A Job?</string>
    <string name="landing_page_instruction_text">Log in with your phone number if you already have an account, or create a new account</string>
    <string name="login_page_title_text">Already have an account?</string>
    <string name="login_page_instruction_text">If you already have a registered account, please log in with your phone number</string>
    <string name="verify_otp_page_title_text">Enter OTP</string>
    <string name="verify_otp_page_instruction_text">A 4 digit OTP has been sent to</string>
    <string name="verify_otp_page_phone_number_text">0179-658-8950</string>
    <string name="verify_otp_page_resend_otp_button_text">Resend OTP</string>
    <string name="verify_otp_page_resend_otp_timer_text">(00:12)</string>
    <string name="verify_otp_page_error_text">This field cannot be empty</string>
    <string name="verify_otp_page_resend_otp_disclaimer_text">Wait till the countdown ends to get a new OTP</string>
    <string name="verify_otp_page_new_otp_disclaimer_text">A new 4 digit OTP has been sent to your number</string>
    <string name="no_job_advertisements_disclaimer_text">Oops! We have no active job advertisements right now. Check back later!</string>
    <string name="no_employers_followed_disclaimer_text">You’re not following any employers right now. Start following your preferred employers to easily access their latest job openings and apply early!</string>
    <string name="failed_login_disclaimer_text">Oops! Login failed. That OTP didn’t work—double-check and try again!</string>
    <string name="login_page_enter_mobile_number_instruction">Enter your mobile number</string>
    <string name="login_page_enter_pin_instruction">Enter your PIN</string>
    <string name="text_bangladesh_country_code">+88</string>
    <string name="text_mobile_number_placeholder">0000–000–0000</string>
    <string name="login_page_get_otp_button_text">Get OTP</string>
    <string name="text_pin_placeholder">*****</string>
    <string name="login_page_reset_pin_button_text_part_1">Forgot pin?</string>
    <string name="login_page_reset_pin_button_text_part_2">Reset</string>
    <string name="error_empty_phone_field">enter your mobile number to continue</string>
    <string name="error_invalid_phone_number">enter a valid mobile number to continue</string>
    <string name="error_empty_pin_field">enter your pin number to continue</string>
    <string name="error_invalid_pin_number">enter a valid mobile number to continue</string>
    <string name="follow_progress_dialog_title_text">Following company...</string>
    <string name="follow_progress_dialog_body_text">We\'re processing your follow request. Please hold on for a moment while we complete it.</string>
    <string name="unfollow_progress_dialog_title_text">Unfollowing company...</string>
    <string name="unfollow_progress_dialog_body_text">We\'re processing your unfollow request. Please hold on for a moment while we complete it.</string>
    <string name="loging_progress_dialog_title_text">Login in progress</string>
    <string name="loging_progress_dialog_disclaimer_text">Your login process is underway. Please wait a moment while we verify your information.</string>
    <string name="registration_progress_dialog_title_text">Registration in Progress</string>
    <string name="registration_progress_dialog_disclaimer_text">Your registration is underway. Please wait while we process your information.</string>
    <string name="failed_to_send_otp_disclaimer_text">Oops! We couldn\'t send the OTP at the moment. Please try again later.</string>
    <string name="registration_success_snackbar_text">Registration successful! You can now log in using the mobile number you used to create your account.</string>
    <string name="account_creation_success_snackbar_text">Your account has been created successfully — complete your profile to join our jobseekers\' network.</string>
    <string name="mobile_verify_success_snackbar_text">Your mobile number has been verified successfully — complete your profile to join our jobseekers\' network.</string>
    <string name="recover_password_progress_dialog_title_text">Password reset request in progress</string>
    <string name="recover_password_progress_dialog_disclaimer_text">Your password reset process is underway. Please wait a moment while we verify your information.</string>
    <string name="verify">Verify</string>
    <string name="otp_placeholder">*</string>
    <string name="text_countdown_end">(00:00)</string>
    <string name="forgot_password_page_name_text">Forgot</string>
    <string name="forgot_password_page_instruction_text">Don’t worry! it happens. Please enter phone number associated with your account</string>
    <string name="create_new_pin_page_name_text">Create New Pin</string>
    <string name="create_pin_page_title_text">Set your New Pin</string>
    <string name="create_pin_page_instruction_text">Please set and confirm your new pin</string>
    <string name="create_pin_page_enter_pin_instruction">Enter your new PIN</string>
    <string name="create_pin_page_enter_pin_confirm_instruction">Re-enter your new PIN</string>
    <string name="create_pin_page_set_pin_button_text">Set Pin</string>
    <string name="verifying_progress_dialog_title_text">Verification in progress</string>
    <string name="verifying_progress_dialog_disclaimer_text">Your verification request is underway. Please wait a moment while we verify your phone number.</string>
    <string name="pin_creation_progress_dialog_title_text">Pin creation in progress</string>
    <string name="pin_creation_progress_dialog_disclaimer_text">Your request is in process. Please wait a moment while we set your new pin.</string>
    <string name="error_empty_confirm_pin_field">confirm your pin to continue</string>
    <string name="error_invalid_pin">pin must be of 5 digits</string>
    <string name="error_pin_mismatched">you need to enter the same pin as above</string>
    <string name="registration_page_name_text">Registration</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_page_phone_title_text">Your Mobile Number?</string>
    <string name="registration_page_phone_instruction_text">To create your account, please provide a valid phone number</string>
    <string name="registration_page_name_title_text">Your Full Name?</string>
    <string name="registration_page_name_instruction_text">To create your account, please provide your full name</string>
    <string name="registration_page_enter_full_name_instruction">Enter your full name</string>
    <string name="text_name_placeholder">Hamidur Rahman</string>
    <string name="registering_phone_progress_dialog_title_text">Verifying your mobile number</string>
    <string name="registering_phone_progress_dialog_disclaimer_text">Please wait while we send a One-Time Password (OTP) to your phone number. This may take a few moments. Once you receive it, enter the code to verify your account.</string>
    <string name="next">Next</string>
    <string name="registration_page_role_title_text">Your Profession?</string>
    <string name="registration_page_role_instruction_text">To create your account, please select your profession</string>
    <string name="registration_page_location_title_text">Your Location?</string>
    <string name="registration_page_location_instruction_text">To create your account, please select your district and division</string>
    <string name="registration_page_enter_role_instruction">Select a profession</string>
    <string name="registration_page_enter_district_instruction">Select a district</string>
    <string name="registration_page_enter_division_instruction">Select a division</string>
    <string name="text_role_placeholder">Driver</string>
    <string name="registration_page_experience_title_text">Your Years of Experience?</string>
    <string name="registration_page_experience_instruction_text">To create your account, please select how many years of experience you have</string>
    <string name="registration_page_enter_experience_instruction">Select years of experience</string>
    <string name="registration_page_nid_input_title_text">Your NID Number?</string>
    <string name="registration_page_nid_input_instruction_text">To create your account, please provide your National ID number</string>
    <string name="registration_page_enter_nid_input_instruction">Enter your National ID (NID) number</string>
    <string name="text_nid_number_placeholder">000–000–0000</string>
    <string name="error_invalid_nid_number">enter a valid NID number to continue</string>
    <string name="error_empty_nid_field">enter your NID number to continue</string>
    <string name="registration_page_nid_upload_title_text">Upload your National ID</string>
    <string name="registration_page_nid_upload_instruction_text">To create your account, please upload a copy of your National ID</string>
    <string name="registration_page_enter_nid_upload_select_button_text">Select your NID photo</string>
    <string name="registration_page_enter_nid_upload_upload_button_text">Upload</string>
    <string name="registration_page_education_title_text">Your highest level of education?</string>
    <string name="registration_page_education_instruction_text">To create your account, please select your highest level of education</string>
    <string name="registration_page_enter_education_instruction">Select an education level</string>
    <string name="registration_page_certificate_upload_title_text">Upload your Certificate</string>
    <string name="registration_page_certificate_upload_instruction_text">To create your account, please upload a copy of your original certificate</string>
    <string name="registration_page_enter_certificate_upload_select_button_text">Select your certificate</string>
    <string name="registration_page_driving_license_input_title_text">Your Driving Licence Number?</string>
    <string name="registration_page_driving_license_input_instruction_text">To create your account, please provide your driving licence number</string>
    <string name="registration_page_enter_driving_license_input_instruction">Enter driving licence number</string>
    <string name="text_driving_license_number_placeholder" translatable="false">DK-0000-0000-00000</string>
    <string name="registration_page_license_upload_title_text">Upload Your Driving Licence</string>
    <string name="registration_page_license_upload_instruction_text">To create your account, please upload a photo of your driving licence</string>
    <string name="registration_page_enter_license_upload_select_button_text">Select Licence Photo</string>
    <string name="registration_page_photo_upload_title_text">Upload Your Photo</string>
    <string name="registration_page_photo_upload_instruction_text">To create your account, please upload your recent photo</string>
    <string name="registration_page_photo_license_upload_select_button_text">Select Photo</string>
    <string name="job_advertisements">Job Advertisements</string>
    <string name="already_applied_jobs">Already Applied Jobs</string>
    <string name="profile">Profile</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_or_support">Help/Support</string>
    <string name="change_language">Change Language</string>
    <string name="bn" translatable="false">Bn</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_out">Sign Out</string>
</resources>