<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.presentation.login.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/login_button_text"
            app:titleTextAppearance="@style/CustomTitleLarge"/>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- main content area -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/login_screen_image" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/CustomTitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:text="@string/login_page_title_text"
                android:textAlignment="center" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/CustomBodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/login_page_instruction_text"
                android:textAlignment="center" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/CustomBodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="40dp"
                android:text="@string/login_page_enter_mobile_number_instruction"
                android:textAlignment="textStart" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input_layout"
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_mobile_number_placeholder"
                    android:inputType="number"
                    android:drawableEnd="@drawable/ic_alert"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/CustomBodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="23dp"
                android:text="@string/login_page_enter_pin_instruction"
                android:textAlignment="textStart" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pin_input_layout"
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/md_theme_primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pin_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_pin_placeholder"
                    android:inputType="number"
                    android:maxLength="5"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_get_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_page_get_otp_button_text"
                android:theme="@style/Widget.Material3.Button.ElevatedButton" />

            <LinearLayout
                android:id="@+id/button_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="?attr/actionBarSize"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true">
                <com.google.android.material.textview.MaterialTextView
                    style="@style/CustomBodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_theme_tertiary"
                    android:textStyle="bold"
                    android:text="@string/login_page_reset_pin_button_text_part_1" />
                <com.google.android.material.textview.MaterialTextView
                    style="@style/CustomBodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"
                    android:text="@string/login_page_reset_pin_button_text_part_2" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>