<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.presentation.landing.LandingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/landing_screen_image"
            android:layout_gravity="center"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:text="@string/landing_page_title_text"
            style="@style/CustomHeadlineSmall"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/landing_page_instruction_text"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:textAlignment="center"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Widget.Material3.Button.ElevatedButton"
            android:text="@string/login_button_text"
            android:layout_marginTop="30dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomTonalButton"
            android:text="@string/create_account_button_text"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
</RelativeLayout>