<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.presentation.registration.NameInputFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/registration_screen_image" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/CustomTitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/registration_page_name_title_text"
            android:textAlignment="center" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/CustomBodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/registration_page_name_instruction_text"
            android:textAlignment="center" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/CustomBodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp"
            android:text="@string/registration_page_enter_full_name_instruction"
            android:textAlignment="textStart" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_input_layout"
            style="@style/CustomTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_name_placeholder"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/next"
            android:theme="@style/Widget.Material3.Button.ElevatedButton" />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>